--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Face Ventura Pet Detector"
+      content="Use Facial Recognition to find shelter pets that look like you!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -40,6 +40,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Face Ventura Pet Detector</title>
+    <meta property="og:image" content="%PUBLIC_URL%/Header.png" />
+    <meta property="og:image:secure_url" content="%PUBLIC_URL%/Header.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
